# NextPyper

./: .gitmodules  MANIFEST.in  NextPiper.yml  README.md  Snakefile  pyproject.toml  requirements.txt  setup.py
nextpiper/: __main__.py
nextpiper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nextpiper/config/: config.yaml  system_config.yaml  taper_parameters.txt
nextpiper/src/: align_clean.py  alignment.py  contig_cluster.py  gfa2fasta.py  gfa_graph.py  gfa_parser.py  gff_parser.py  graph_alns_parser.py  hmm_build.py  interval_tree.py  prefix_seqs.py  reads_distributor.py  spaligner_parser.py  trans_dec_parser.py
nextpiper/workflow/: Snakefile
nextpyper/: __main__.py  nextpiper.CITATION  nextpyper.LICENSE
nextpyper/config/: config.yaml  rich_config.yaml  system_config.yaml
nextpyper/data/: blosum62.csv  cps_seqids.csv  probes.fasta
nextpyper/src/: align_clean.py  alignment.py  contig_cluster.py  divergence_estimation.py  diversity.py  exon_discovery.py  exon_intron.py  fix_headers.py  gfa2fasta.py  gfa_graph.py  gfa_parser.py  gff_parser.py  graph_alns_parser.py  graph_edge.py  graph_utils.py  hmm_search.py  homolog_filtering.py  interval_tree.py  miniprot.py  mmseqs.py  multi_seq_probes.py  outgroup_cluster.py  paralogs.py  prefix_seqs.py  reads_distributor.py  run_orfipy.py  scaffold_cluster.py  seeds_collection.py  spaligner_parser.py  summarize_results.py  test_data.txt  trans_dec_parser.py  union_find.py  var_asm_parser.py  vsearch.py
src/: align_clean.py  contig_cluster.py  graph_edge.py  hmm_search.py  prefix_seqs.py
(+98 files in other folders)
